Изменен код. Публикация сайта на Git Pages

--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Публикация сайта
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          branch: preview
+          branch: git_actions
           folder: _site
