Changed code 3. Git Pages

--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -4,30 +4,21 @@ on:
   push:
     branches:
       - main
-
+          
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Загрузка из репозитория
-        uses: actions/checkout@v2
-      - name: Кэширование модулей
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
+      - name: Checkout 
+        uses: actions/checkout@v3
+
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build
+
+      - name: Deploy 
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: Установка модулей
-        run: npm ci
-      - name: Сборка сайта
-        run: npm run build
-      - name: Публикация сайта
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: git_actions
-          folder: _site
+          branch: gh-pages
+          folder: build
