--- a/.github/workflows/preview_Surge.yml
+++ b/.github/workflows/preview_Surge.yml
@@ -7,15 +7,17 @@ jobs:
   preview:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: afc163/surge-preview@v1
+      - name: Загрузка контента
+        uses: actions/checkout@v2
+      - name: Сборка и публикация превью сайта на Surge
+        uses: afc163/surge-preview@v1
         id: preview_step
         with:
           surge_token: ${{ secrets.SURGE_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          dist: public
+          dist: _site
           build: |
-            npm install
+            npm ci
             npm run build
-      - name: Get the preview_url
-        run: echo "url => ${{ steps.preview_step.outputs.preview_url }}"
+      - name: Отображение сообщения в интерфейсе GitHub Actions
+        run: echo "Ссылка на превью ${{ steps.preview_step.outputs.preview_url }}"
