--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -1,24 +1,23 @@
-name: Публикация сайта на GitHub Pages
 
-on:
-  push:
-    branches:
-      - main
-          
+name: Build and Deploy
+on: [push]
+permissions: 
+  contents: write
 jobs:
   build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 
+      - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm ci
           npm run build
 
-      - name: Deploy 
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          branch: gh-pages
-          folder: build
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
