--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -1,7 +1,9 @@
 
 name: Build and Deploy
-on: [push]
-
+on:
+  push:
+    branches:
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -17,5 +19,5 @@ jobs:
       - name: Deploy 
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          branch: main # The branch the action should deploy to.
+          branch: git_action # The branch the action should deploy to.
           folder: _site
