--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -1,3 +1,4 @@
+
 name: Публикация сайта на GitHub Pages
 
 on:
@@ -15,6 +16,13 @@ jobs:
         uses: actions/cache@v2
         env:
           cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       - name: Установка модулей
         run: npm ci
       - name: Сборка сайта
