--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: build # The folder the action should deploy.
+          branch: main # The branch the action should deploy to.
+          folder: turing-garden # The folder the action should deploy.
