--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -1,33 +1,22 @@
-name: Публикация сайта на GitHub Pages
-
-on:
-  push:
-    branches:
-      - main
-
+name: Build and Deploy
+on: [push]
+permissions: 
+  contents: write
 jobs:
-  deploy:
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
     steps:
-      - name: Загрузка из репозитория
-        uses: actions/checkout@v2
-      - name: Кэширование модулей
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
+      - name: Checkout 
+        uses: actions/checkout@v3
+
+      - name: Install and Build  # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: Установка модулей
-        run: npm ci
-      - name: Сборка сайта
-        run: npm run build
-      - name: Публикация сайта
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: git_actions
-          folder: _site
+          branch: git_actions # The branch the action should deploy to.
+          folder: _site # The folder the action should deploy.
