--- a/.github/workflows/Git_Pages_publishing.yml
+++ b/.github/workflows/Git_Pages_publishing.yml
@@ -10,19 +10,23 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v3
         
-        env:
-            cache-name: cache-node-modules
+      - uses: actions/setup-node@v2
         with:
-            path: ~/.npm
-            key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-            restore-keys: |
-              ${{ runner.os }}-build-${{ env.cache-name }}-
-              ${{ runner.os }}-build-
-              ${{ runner.os }}-
+          node-version: 16
+      - name: Кэширование модулей
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
 
       - name: Install and Build  # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          npm install
           npm ci
           npm run build
       
@@ -30,5 +34,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          branch: git_actions # The branch the action should deploy to.
+          branch: deploy # The branch the action should deploy to.
           folder: _site # The folder the action should deploy.
