--- a/.github/workflows/surge-preview.yml
+++ b/.github/workflows/surge-preview.yml
@@ -1,22 +1,83 @@
-name: Preview Surge
+name: Surge Preview
+
 on:
   pull_request
 
 jobs:
   preview:
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.draft == false }}
+    env:
+      DEPLOY_DOMAIN: 'https://${{ github.repository_owner }}-platform-pr-${{ github.event.number }}.surge.sh'
+      SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      PATH_TO_CONTENT: ./content
     steps:
-      - name: checkout
+      - name: Загрузка платформы
         uses: actions/checkout@v2
-      - name: build and deploy
-        uses: afc163/surge-preview@v1
-        id: preview_step
+      - uses: actions/setup-node@v2
         with:
-          surge_token: ${{ secrets.SURGE_TOKEN }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          dist: _site
-          build: |
-            npm ci
-            npm run build
-      - name: Generate message
-        run: echo "Preview: ${{ steps.preview_step.outputs.preview_url }}"
+          node-version: 16
+      - name: Кэширование модулей
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Получение идентификатора
+        id: check
+        if: ${{ env.SURGE_TOKEN != '' }}
+        run: |
+          check_suite_url=$(curl -s -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }} | jq -r '.check_suite_url')
+          check_run_id=$(curl -s -H "Accept: application/vnd.github.v3+json" $check_suite_url/check-runs | jq '.check_runs[] | .id')
+          echo "::set-output name=check_id::$check_run_id"
+      - name: Установка модулей
+        run: npm ci
+      - name: Сообщение о начале публикации превью
+        uses: hasura/comment-progress@v2.1.0
+        if: ${{ env.SURGE_TOKEN != '' }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          number: ${{ github.event.number }}
+          id: surge-progress-${{ github.event.number }}
+          message: 'Идёт сборка и публикация превью... [Подробнее](https://github.com/${{ github.repository }}/runs/${{ steps.check.outputs.check_id }}?check_suite_focus=true)'
+          recreate: true
+      - name: Сборка и публикация сайта
+        id: surge
+        continue-on-error: true
+        run: |
+          cp .env.example .env
+          npm run preview
+          if ! [[ ${{ env.SURGE_TOKEN == '' }} ]]; then
+            npx surge ./dist ${{ env.DEPLOY_DOMAIN }} --token ${{ env.SURGE_TOKEN }}
+          else
+            echo 'Публикация для форка репозитория'
+            npx surge ./dist ${{ env.DEPLOY_DOMAIN }} --token '6973bdb764f0d5fd07c910de27e2d7d0'
+          fi
+          echo 'Ссылка на превью — ${{ env.DEPLOY_DOMAIN }}'
+      - name: Сообщение об успехе публикации превью
+        uses: hasura/comment-progress@v2.1.0
+        if: ${{ env.SURGE_TOKEN != '' && steps.surge.conclusion == 'success' }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          number: ${{ github.event.number }}
+          id: surge-progress-${{ github.event.number }}
+          message: '[Превью контента](${{ env.DEPLOY_DOMAIN }}) из ${{ github.event.pull_request.head.sha }} опубликовано.'
+          recreate: true
+      - name: Сообщение о неудаче публикации превью
+        uses: hasura/comment-progress@v2.1.0
+        if: ${{ env.SURGE_TOKEN != '' && steps.surge.conclusion != 'success' }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          number: ${{ github.event.number }}
+          id: surge-progress-${{ github.event.number }}
+          message: 'Превью контента из ${{ github.event.pull_request.head.sha }} не опубликовано. Ошибка сборки или публикации. [Подробнее](https://github.com/${{ github.repository }}/runs/${{ steps.check.outputs.check_id }}?check_suite_focus=true)'
+          fail: true
