--- a/.github/workflows/loading-page.yml
+++ b/.github/workflows/loading-page.yml
@@ -1,15 +1,17 @@
-k6_cloud_test:
-  name: k6 cloud test run
-  on: [push]
+name: k6 cloud test run
+on: [ push ]
 
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v1
 
-    - name: Run k6 cloud test
-      uses: k6io/action@v0.1
-      with:
-        filename: test.js
-        cloud: true
-        token: ${{ secrets.K6_CLOUD_API_TOKEN }}
+jobs:
+  validate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Run k6 cloud test
+        uses: k6io/action@v0.1
+        with:
+          filename: test.js
+          cloud: true
+          token: ${{ secrets.K6_CLOUD_API_TOKEN }}
