--- a/.github/workflows/loading-page.yml
+++ b/.github/workflows/loading-page.yml
@@ -9,9 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Run k6 cloud test
-        uses: k6io/action@v0.1
+      - name: Run local k6 test
+        uses: grafana/k6-action@v0.2.0
         with:
           filename: test.js
-          cloud: true
-          token: ${{ secrets.K6_CLOUD_API_TOKEN }}
