--- a/.github/workflows/w3c-validator.yml
+++ b/.github/workflows/w3c-validator.yml
@@ -12,8 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        with:
-          node-version: 14
+          with:
+            node-version: 16
+            - uses: actions/setup-java@v1
+              with:
+                java-version: 8
+                architecture: x64
       - name: Кэширование модулей
         uses: actions/cache@v2
         env:
