--- a/.github/workflows/yaspeller-all.yml
+++ b/.github/workflows/yaspeller-all.yml
@@ -1,9 +1,10 @@
 name: YaSpeller All
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    push:
+      branches:
+        - main
 
 jobs:
   yaspeller:
