--- a/.github/workflows/editorconfig.yml
+++ b/.github/workflows/editorconfig.yml
@@ -1,9 +1,10 @@
 name: EditorConfig
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    push:
+      branches:
+        - main
 
 jobs:
   lint:
